# ollama_pc_monitor

./: .gitignore  Cargo.toml  README.md  server.py
src/: main.rs
